--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "users/lttb"]
 	path = users/lttb
-	url = https://github.com/lttb/qmk-config
+	url = git@github.com:lttb/qmk-config
     branch = main
 [submodule "lib/chibios"]
 	path = lib/chibios
